<resources>
    <string name="app_name">Edu Quizzes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="textview1">TextView</string>
    <string name="textview">TextView</string>
    <string name="register">Register</string>
    <string name="not_have_account">Not have account?</string>
    <string name="register_here">Register Here</string>
    <string name="forgotpassword">forgotpassword</string>
    <string name="sets">Sets</string>
    <string name="title">Title</string>
</resources>